syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.otp";

service  CreateOtpCodeService {
  rpc createOtp(CreateOtpRequestDto) returns (CreateOtpResponseDto);
}

enum OperationType {
  LOGIN = 0;
  FORGOT_PASSWORD = 1;
  REGISTER = 2;
}
message CreateOtpRequestDto {
  int64 userId = 1;
  OperationType operationType = 2;
  string userAgent = 3;
}

message CreateOtpResponseDto {
  bool success = 1;
  string message = 2;
}